# athena-test-0003

./: .gitignore  README.md  athena.yaml  main.py  pyproject.toml
codex/: __init__.py
codex/blocks/: __init__.py  download_checkpoint.py  generate_full.py  generate_preview.py
codex/inspectors/metric_line_chart/: athena.inspector.json  package-lock.json  package.json  tsconfig.json
codex/inspectors/metric_line_chart/src/: index.js  index.tsx
codex/inspectors/scalar_summary/: athena.inspector.json  package-lock.json  package.json
codex/inspectors/scalar_summary/src/: index.js  index.tsx
codex/inspectors/slideshow/: athena.inspector.json  package-lock.json  package.json
codex/inspectors/slideshow/src/: index.js  index.tsx
codex/pipelines/: __init__.py  ddpm_pipeline.py
tests/: __init__.py
tests/blocks/: __init__.py
