[project]
name = "athena-test-0003"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "buildathena-sdk>=0.1.22",
    "diffusers>=0.36.0",
    "pillow>=12.1.0",
    "torch>=2.10.0",
    "transformers>=5.1.0",
]
